--- a/overlay/Aperture/res/values/config.xml
+++ b/overlay/Aperture/res/values/config.xml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     SPDX-FileCopyrightText: 2023 The LineageOS Project
+     SPDX-FileCopyrightText: 2022-2023 The LineageOS Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
     <!-- Enable auxiliary cameras selector. -->
     <bool name="config_enableAuxCameras">true</bool>
 
-    <!-- List of ID of auxiliary cameras that must be ignored by the app. -->
+    <!-- The logical camera is ID4 -->
     <string-array name="config_ignoredAuxCameraIds">
+        <item>0</item>
+        <item>2</item>
+        <item>3</item>
+        <item>5</item>
         <item>6</item>
     </string-array>
 
-    <!-- An array of triplets made of (camera ID, qualities, framerates).
-         These video modes will be added to the available
-         quality/framerate combinations of a camera device.
-         Make sure the device is able to handle those configurations
-         and maintain a stable framerate at any condition.
-         Note that you can't add video qualities that aren't
-         exposed by the camera, only new framerates.
-         Valid values of resolution are:
-          - "sd" (480p)
-          - "hd" (720p)
-          - "fhd" (1080p)
-          - "uhd" (2160p)
-         Valid values of framerate are:
-          - "24"
-          - "30"
-          - "60"
-          - "120"
-         Example:
-             <string-array name="config_additionalVideoConfigurations">
-                 <item>0</item> <item>sd|hd|fhd</item> <item>60|120</item>
-                 <item>1</item> <item>sd|hd|fhd</item> <item>60</item>
-             </string-array>
+    <!-- Decide whether to ignore auxiliary cameras that
+         are logical (made of multiple physical sensors).
+         Set this to false if your camera HAL doesn't expose
+         one or more aux cameras as a standalone camera device.
+         Note that you will probably need to add
+         more camera IDs to ignoreCameraIds. -->
+    <bool name="config_ignoreLogicalAuxCameras">false</bool>
+
+    <!-- The ultra-wide camera doesn't do 60 fps, but only
+         the logical ID4 is able to provide stable 60 fps from the main camera.
+         Even if ID0 gets fixed, it's better this way until physical and logical IDs
+         can coexist in Aperture (e.g. at 60 fps, logical ID would be replaced with physical).
+         When both things happen, ID4 can be removed from this list while ID0 and ID2
+         should no longer be ignored.
     -->
     <string-array name="config_additionalVideoConfigurations">
         <item>0</item> <item>sd|hd|fhd|uhd</item> <item>60</item>
-        <item>1</item> <item>sd|hd|fhd</item>     <item>60</item>
-        <item>2</item> <item>sd|hd|fhd|uhd</item> <item>60</item>
-        <item>3</item> <item>sd|hd|fhd|uhd</item> <item>60</item>
+        <item>1</item> <item>sd|hd|fhd</item> <item>60</item>
+        <item>4</item> <item>sd|hd|fhd|uhd</item> <item>60</item>
+    </string-array>
+
+    <!-- 2x in-sensor zoom seemingly requires
+         org.codeaurora.qcamera3.sessionParameters.EnableInsensorZoom
+         and so is omitted. -->
+    <string-array name="config_logicalZoomRatios">
+        <item>4</item> <item>0.6</item> <item>0.64999998</item>
     </string-array>
 </resources>
