--- a/overlay/SystemUI/res/values/dimens.xml
+++ b/overlay/SystemUI/res/values/dimens.xml
@@ -6,4 +6,14 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <dimen name="rounded_corner_content_padding">49.0px</dimen>
     <dimen name="keyguard_indication_margin_bottom">16dp</dimen>
+
+    <!-- Location on the screen of the center of the physical power button. This is a reasonable
+    default that should be overridden by device-specific overlays. -->
+    <dimen name="physical_power_button_center_screen_location_y">1385px</dimen>
+
+    <!-- Location on the screen of the center of the fingerprint sensor. For devices with under
+     display fingerprint sensors, this directly corresponds to the fingerprint sensor's location.
+     For devices with sensors on the back of the device, this corresponds to the location on the
+     screen directly in front of the sensor. -->
+    <dimen name="physical_fingerprint_sensor_center_screen_location_y">2882px</dimen>
 </resources>
